--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<h1>Welcome to <%= @crm_app_name %></h1>
+	<p>This site was updated as of <%= Time.now.ctime %></p>
 	<p>Main Menu</p>
 	<ul>
 		<li><a href="/contacts">View all contacts</li>
