added POST request and redirection

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,6 @@
 		<li><a href="/contacts">View all contacts</li>
 		<li><a href="/contacts/new">Add new contact</li>
 		<li><a href="/contacts/:id">View a contact by ID</li>
-		<li><a href="contact/:id/edit">Modify an existing contact</li>
+		<li><a href="contacts/:id/edit">Modify an existing contact</li>
 	</ul>
 </html>
