added header and footer

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
+
+<title><%= "#{@crm_app_name}" %></title>
 	<h1>Welcome to <%= @crm_app_name %></h1>
 	<p>This site was updated as of <%= Time.now.ctime %></p>
 	<p>Main Menu</p>
@@ -7,3 +9,4 @@
 		<li><a href="/contacts/:id">View a contact by ID</li>
 		<li><a href="contacts/:id/edit">Modify an existing contact</li>
 	</ul>
+	<div></div>
