--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
+<html>
 <head>
-	<title> </title>
+<!-- 	<title>Arjun's CRM</title> -->
 </head>
+	<body> 
+		<header>Arjun's CRM App</header>
+		<%= yield %> 
+	</body>
 
-<body> <%= yield %> </body>
+
+<footer>&copy; Arjun Bali 2014</footer>
+</html>
+
