--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,2 @@
-
 <title><%= "#{@crm_app_name}" %></title>
-	<h1>Welcome to <%= @crm_app_name %></h1>
-	<p>This site was updated as of <%= Time.now.ctime %></p>
-	<p>Main Menu</p>
-	<ul>
-		<li><a href="/contacts">View all contacts</li>
-		<li><a href="/contacts/new">Add new contact</li>
-		<li><a href="/contacts/:id">View a contact by ID</li>
-		<li><a href="contacts/:id/edit">Modify an existing contact</li>
-	</ul>
-	<div></div>
+<!-- <h1>Welcome to <%= @crm_app_name %></h1> -->
