--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,9 +1,9 @@
 <h1>Create new contact</h1>
 
 <form action="/contacts" method="post">
-	<input type="text" name="first_name">
-	<input type="text" name="last_name">
-	<input type="text" name="email">
-	<input type="text" name="note">
-	<input type="submit" name="Submit">
+	<input type="text" name="first_name" placeholder="First name">
+	<input type="text" name="last_name" placeholder="Last name">
+	<input type="text" name="email" placeholder="Email">
+	<input type="text" name="note" placeholder="Note">
+	<input type="submit" name="SUBMIT">
 </form>
