--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,9 @@ body {
 
 h1 {
 	font-size: 30px;
+}
+
+div {
 	margin-left: 5%;
 }
 
@@ -56,36 +59,31 @@ header {
 	text-align: center;
 	margin-bottom: 16px;
 	font-size: 3em;
+	/* rem is relative to the body, not the parent */
 }
 
-form {
-	margin-left: 5%;
-}
 
 input {
-	-webkit-border-radius: 3px; 
-	-moz-border-radius: 3px; 
-	border-radius: 3px;
-	-moz-box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,0.5); 
-	-webkit-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5); 
-	box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,0.5);
-	input:focus { 
-	border:solid 1px #EEA34A; 
+		font-family: 'Permanent Marker', cursive !important;
+	font-size: 24px !important;
+	border: none !important;
+	border-bottom: 1px solid goldenrod !important;
+	background: transparent !important;
+}
+input:focus {
+	outline: none;
 }
 
-input sumbit {
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#ddd), to(#aaa)); 
-	background-image: -webkit-linear-gradient(top, #ddd, #aaa); 
-	background-image: -moz-linear-gradient(top, #ddd, #aaa); 
-	background-image: -ms-linear-gradient(top, #ddd, #aaa); 
-	background-image: -o-linear-gradient(top, #ddd, #aaa); 
-	background-image: linear-gradient(top, #ddd, #aaa); 
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddd', endColorstr='#aaa',GradientType=0 ); /* IE6-9 */
-}
 
 .list {
-	font-size: 100px
+	font-size: 20px
 }
+
+ button, input, select, textarea {
+ 	font-size: 100%;
+ 	font-family: inherit;
+ }
+
 
 /*
 black: #4E4E56;
