--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,7 +1,9 @@
 <title><%= "CRM: #{@@rolodex}" %></title>
+<div>
 <h1>All Contacts</h1>
-<ul>
+<ul class="list">
 	<% @@rolodex.contacts.each do |contact| %>
 	<li><%= contact.first_name %> <%= contact.last_name %></li>
 	<% end %>
 </ul>
+</div>
