--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,9 +1,29 @@
-<h1>Create new contact</h1>
+<!-- forms use get and post requests - we "fake" the other ones
 
-<form action="/contacts" method="post">
-	<input type="text" name="first_name" placeholder="First name">
-	<input type="text" name="last_name" placeholder="Last name">
-	<input type="text" name="email" placeholder="Email">
-	<input type="text" name="note" placeholder="Note">
-	<input type="submit" name="SUBMIT">
+request is determined by both verb and path
+GET /contacts (returns data to you)
+POST /contacts (creates a resource on the other end)
+if POST or GET is not explicitly stated as the method, I think it's by default a GET request
+-->
+<div><h1>Create new contact</h1></div>
+<br>
+<form action="/contacts" method="post"> 
+					<!-- form is a block level attriute -->
+	<div>
+		<input type="text" name="first_name" placeholder="First name">
+	</div>
+	<!-- using value="defaultvalue" basically has the box prefilled. Don't use placehoder if it's a long form - only use it for hints because if it's a long form, the user comes back to the top and has no context for what that box was for. Actually label the boxes when it's a long form! -->
+	<div><input type="text" name="last_name" placeholder="Last name"></div>
+	<div><input type="text" name="email" placeholder="Email"></div>
+	<div><input type="text" name="note" placeholder="Note"></div>
+	<div><button type="submit"><h1>ADD!</button></div>
 </form>
+
+<!-- 
+
+<form action="/create_user" method="post">
+	<h2>sign up here</h2>
+	<div class="field">
+		<label for="first-name"> First Name</label>
+		<input type="text">
+</form> -->
