added modify form

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,7 @@
 	<ul>
 		<li><a href="/contacts" class="link">All contacts</a></li>
 		<li><a href="/contacts/new" class="link">New contact</a></li>
-		<li><a href="/contacts/:id/edit" class="link">
+		<li><a href="/contacts/edit/:id" class="link">
 			Modify contact</a></li>
 		<li><a href="/contacts/:id" class="link">Search</a></li>
 	</ul>
