--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -1,6 +1,6 @@
 <h1>Modify an Existing Contact</h1>
 
-<form action="/contacts/edit/<%= @contact.id %>" method="post">
+<form action="/contacts/<%= @contact.id %>/edit" method="post">
 	<input type="hidden" name="_method" value="put">
 	<input type="text" name="first_name" value="<%= @contact.first_name %>">
 	<input type="text" name="last_name" value="<%= @contact.last_name %>">
