--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -4,3 +4,8 @@
 	<p><strong>Note:</strong></p>
 	<p><%= @contact.note %></p>
 </div>
+
+<form action="/contracts/ <%= @contact.id %>" method="post">
+	<input type="hidden" name="_method" value="delete">
+	<input type="submit" name="Delete Contact">
+</form>
