--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -3,7 +3,7 @@
 <h1>All Contacts</h1>
 <ul class="list">
 	<% @@rolodex.contacts.each do |contact| %>
-	<li><%= contact.first_name %> <%= contact.last_name %></li>
+	<a href="/contacts/<%= contact.id %>"><li><%= contact.first_name %> <%= contact.last_name %></li></a>
 	<% end %>
 </ul>
 </div>
