--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -1,10 +1,10 @@
 <h1>Modify an Existing Contact</h1>
 
-<form action="/contacts/<%= @contact.id %>/edit" method="post">
+<form action="/contacts/<%= @contact.id %>" method="post">
 	<input type="hidden" name="_method" value="put">
 	<input type="text" name="first_name" value="<%= @contact.first_name %>">
 	<input type="text" name="last_name" value="<%= @contact.last_name %>">
 	<input type="email" name="email" value="<%= @contact.email%>">
 	<input type="text" name="note" value="<%= @contact.note %>">
-	<input type="submit" name "MODIFY">
+	<input type="submit" name="MODIFY">
 </form>
