--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -1,15 +1,11 @@
-<div>
 	<h1><%= @contact.first_name %> <%= @contact.last_name %></h1>
 	<p><strong>Email: </strong> <%= @contact.email %></p>
 	<p><strong>Note: </strong><%= @contact.note %></p>
-</div>
 
 
-<div>
-	<form action="/contacts/ <%= @contact.id %>" method="post">
+<form action="/contacts/ <%= @contact.id %>" method="post">
 	<input type="hidden" name="_method" value="delete">
-	<input type="submit" name="Delete Contact" class="font-size-reset" value="Delete" style="cursor: pointer; cursor: hand;">
+	<input type="submit" name="Delete Contact" class="font-size-reset" value="Delete">
 </form>
 
 <a href="/contacts/<%= @contact.id %>/edit">Edit Contact</a>
-</div>
